v3.8.3 (XXXX-XX-XX)
-------------------

* Change error message for queries that use too much memory from "resource limit
  exceeded" to "query would use more memory than allowed".

* arangorestore: Fix the order (regarding distributeShardsLike) in which
  collections are being created during restore, which could result in an error
  and make manual intervention necessary.


v3.8.2 (2021-10-26)
-------------------

* Updated ArangoDB Starter to 0.15.3.

* Fix a potential overwhelm situation on DB servers that can lead to no further
  tasks being pulled from a DB servers queue even though there would still be
  processing capacity and idle threads available.

* Fixed compilation and linking when using glibc 2.34.

* Fuerte: don't fall back to identity encoding in case of unknown encoding.

* Fix caching of collection counts and index selectivity estimates in cluster.
  The cache values expired too early in previous versions, making the cache
  ineffective.

* Add better error message for replication request failures in case requests are
  retried.

* Make background statistics gathering more efficient by avoiding one AQL query
  every 10 seconds that fetched the most recent stats entry. Instead, buffer the
  entry in value after we have written it. Also spread out the statistics calls
  by different servers more randomly, so that request spikes are avoided for
  cluster with many coordinators that used to run their statistics queries at
  about the same time when the instances were started simultaneously.

* Fixed ES-881: Fixed LDAP global options. This needs to use the first active
  provider, not just the first provider and it should be globally disabled.

* Do not use an edge index for range queries, i.e. with the comparison operators
  `>`, `>=`, `<` or `<=`, but only for equality lookups using the `==` and `IN`
  comparison operators.
  The edge index is not fully ordered, so while using it for range queries may