@@ -195,6 +195,22 @@ class Action {
     return _action->priority();
   }
 
+  bool requeueRequested() const {
+    return _action->requeueRequested();
+  }
+
+  int requeuePriority() const {
+    return _action->requeuePriority();
+  }
+
+  void pleaseRequeueMe(int requeuePriority) {
+    _action->pleaseRequeueMe(requeuePriority);
+  }
+
+  void setPriority(int newPriority) {
+    _action->setPriority(newPriority);
+  }
+
  private:
   /// @brief actually create the concrete action
   void create(MaintenanceFeature&, ActionDescription const&);
