@@ -177,7 +177,7 @@ bool CreateCollection::first() {
       // In this case, we do not report an error and do not increase the version
       // number of the shard in `setState` below.
       if (res.errorNumber() == TRI_ERROR_ARANGO_DUPLICATE_NAME) {
-        LOG_TOPIC("9db9c", INFO, Logger::MAINTENANCE)
+        LOG_TOPIC("9db9c", DEBUG, Logger::MAINTENANCE)
         << "local collection " << database << "/" << shard
         << " already found, ignoring...";
         result(TRI_ERROR_NO_ERROR);
