@@ -40,8 +40,16 @@
 #include <queue>
 
 namespace arangodb {
+class LogicalCollection;
 namespace maintenance {
 enum ActionState;
+
+
+// The following is used in multiple Maintenance actions and therefore
+// made available here.
+arangodb::Result collectionCount(arangodb::LogicalCollection const& collection,
+                                 uint64_t& c);
+
 }
 
 template <typename T>
@@ -73,7 +81,7 @@ class MaintenanceFeature : public application_features::ApplicationFeature {
   typedef std::map<ShardID, std::shared_ptr<maintenance::ActionDescription>> ShardActionMap;
 
   /// @brief Lowest limit for worker threads
-  static constexpr uint32_t const minThreadLimit = 2;
+  static constexpr uint32_t const minThreadLimit = 3;
 
   /// @brief Highest limit for worker threads
   static constexpr uint32_t const maxThreadLimit = 64;
@@ -151,6 +159,13 @@ class MaintenanceFeature : public application_features::ApplicationFeature {
   /// @brief check if a database is dirty
   bool isDirty(std::string const& dbName) const;
 
+  /// @brief Requeue an action with a new priority. This will clone the
+  /// action to create a new action object with a different priority.
+  /// It is only allowed to requeue actions which are in states
+  /// ActionState::COMPLETE or ActionState::FAILED!
+  Result requeueAction(std::shared_ptr<maintenance::Action>& action,
+                       int newPriority);
+
  protected:
   std::shared_ptr<maintenance::Action> createAction(
       std::shared_ptr<maintenance::ActionDescription> const& description);
@@ -176,6 +191,7 @@ class MaintenanceFeature : public application_features::ApplicationFeature {
 
   /// @brief Return pointer to next ready action, or nullptr
   std::shared_ptr<maintenance::Action> findReadyAction(
+      int minimalPriorityAllowed,
       std::unordered_set<std::string> const& options = std::unordered_set<std::string>());
 
   /// @brief Process specific ID for a new action
